Transferring all Files into new repository

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       <a href="https://en.wikipedia.org/wiki/FouseyTube">Fouseytube - Yousef Salah Erakat (Wikipedia)</a><br>
       
       <img src="images/Yousef_Erakat_by_Adam_Hendershott.jpg" width="200px">
+      <img src="images/FOUSEY.webp" width="200px">
+      <img src="images/16-fouseyTUBE-1200x834.jpg" width="200px">
 
     </li>
   </ul>
