--- a/pages/sources.html
+++ b/pages/sources.html
@@ -26,6 +26,8 @@
     <td><a href="https://youtube.fandom.com/wiki/FOUSEY">Fousey - Wikitubia</a></td>
     </tr>
     </table>
+    <p>Fousey's Most popular youtube video:</p>
+    <a href="https://youtu.be/1W8hsVvyKt4?si=9nYFp7gLY-XwUztz">Fousey - MORTAL KOMBAT ELEVATOR PRANK!</a>
     <img src="images.jpg" width="200px">
     <img src="Yousef_Erakat_(14524994666).jpg" width="200px">
 </body>
