--- a/pages/sources.html
+++ b/pages/sources.html
@@ -27,7 +27,8 @@
     </tr>
     </table>
     <p>Fousey's Most popular youtube video:</p>
-    <a href="https://youtu.be/1W8hsVvyKt4?si=9nYFp7gLY-XwUztz">Fousey - MORTAL KOMBAT ELEVATOR PRANK!</a>
+    <a href="https://youtu.be/1W8hsVvyKt4?si=9nYFp7gLY-XwUztz">Fousey - MORTAL KOMBAT ELEVATOR PRANK!</a><br>
+    <br>
     <img src="images.jpg" width="200px">
     <img src="Yousef_Erakat_(14524994666).jpg" width="200px">
 </body>
